<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/savana"
    tools:context=".Settings"
    android:id="@+id/setting">

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/sound"
        android:layout_width="311dp"
        android:layout_height="100dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:checkedButton="@id/on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on"
            android:textSize="26sp"
            android:textStyle="bold"
            android:onClick="onClickSoundOn"/>

        <RadioButton
            android:id="@+id/mute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mute"
            android:textSize="26sp"
            android:textStyle="bold"
            android:onClick="onClickSoundOff"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/difficulty"
        android:layout_width="327dp"
        android:layout_height="106dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="90dp"
        android:checkedButton="@id/easy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:textSize="26sp"
            android:textStyle="bold"
            android:onClick="onClickEasy"/>

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:textSize="26sp"
            android:textStyle="bold"
            android:onClick="onClickNormal"/>

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:textSize="26sp"
            android:textStyle="bold"
            android:onClick="onClickHard"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/background"
        android:layout_width="311dp"
        android:layout_height="114dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:checkedButton="@id/savana"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/savana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSavana"
            android:text="@string/savana"
            android:textSize="26sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/forest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickForest"
            android:text="@string/forest"
            android:textSize="26sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickWhite"
            android:text="@string/white"
            android:textSize="26sp"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/soundText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="12dp"
        android:text="@string/sound"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:text="@string/difficulty"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/difficulty"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/backgroundText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:text="@string/background"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>